--- a/deployServer2/src/docs/asciidoc/index.adoc
+++ b/deployServer2/src/docs/asciidoc/index.adoc
@@ -73,3 +73,82 @@ include::{snippets}/delete-tag/httpie-request.adoc[]
 .path-parameters.adoc
 include::{snippets}/delete-tag/path-parameters.adoc[]
 
+***
+== AnswerController
+=== 답변 등록
+.curl-request
+include::{snippets}/post-answer/curl-request.adoc[]
+
+.http-request
+include::{snippets}/post-answer/http-request.adoc[]
+
+.request-fields
+include::{snippets}/post-answer/request-fields.adoc[]
+
+.http-response
+include::{snippets}/post-answer/http-response.adoc[]
+
+.response-fields
+include::{snippets}/post-answer/response-fields.adoc[]
+
+=== 답변 수정
+.curl-request
+include::{snippets}/patch-answer/curl-request.adoc[]
+
+.http-request
+include::{snippets}/patch-answer/http-request.adoc[]
+
+.request-fields
+include::{snippets}/patch-answer/request-fields.adoc[]
+
+.http-response
+include::{snippets}/patch-answer/http-response.adoc[]
+
+.response-fields
+include::{snippets}/patch-answer/response-fields.adoc[]
+
+=== 특정 답변 정보 조회
+.curl-request
+include::{snippets}/get-answer/curl-request.adoc[]
+
+.http-request
+include::{snippets}/get-answer/http-request.adoc[]
+
+.path-parameters
+include::{snippets}/get-answer/path-parameters.adoc[]
+
+.http-response
+include::{snippets}/get-answer/http-response.adoc[]
+
+.response-fields
+include::{snippets}/get-answer/response-fields.adoc[]
+
+=== 모든 답변 정보 조회
+.curl-request
+include::{snippets}/get-answers/curl-request.adoc[]
+
+.http-request
+include::{snippets}/get-answers/http-request.adoc[]
+
+.http-response
+include::{snippets}/get-answers/http-response.adoc[]
+
+.response-fields
+include::{snippets}/get-answers/response-fields.adoc[]
+
+=== 특정 태그 정보 삭제
+.curl-request
+include::{snippets}/delete-answer/curl-request.adoc[]
+
+.http-request
+include::{snippets}/delete-answer/http-request.adoc[]
+
+.http-response
+include::{snippets}/delete-answer/http-response.adoc[]
+
+.httpie-request
+include::{snippets}/delete-answer/httpie-request.adoc[]
+
+.path-parameters.adoc
+include::{snippets}/delete-answer/path-parameters.adoc[]
+
